@@ -1,8 +1,0 @@
-figs =
-docname = gnome-mud-plugin-api
-lang = C
-omffile = gnome-mud-plugin-api-C.omf
-entities = monitor.py
-sgml_ents =
-include $(top_srcdir)/doc/xmldocs.make
-dist-hook: app-dist-hook
