@@ -1,18 +1,0 @@
-<?xml version="1.0" standalone="no"?>
-<omf>
-  <resource>
-    <creator>Petter E. Stokke</creator>
-    <maintainer>Jordi Mallach</maintainer>
-    <title>GNOME-Mud Plugin API</title>
-    <date>2003-06-02</date>
-    <version identifier="1.0" date="2003-06-03" description="Updated for GNOME-Mud 0.10.0"/>
-    <subject category="GNOME|Development"/>
-    <description>This document describes how to code plugins for GNOME-Mud, in Python and C.</description>
-    <type>manual</type>
-    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-    <identifier url="gnome-mud-plugin-api.xml"/>
-    <language code="C"/>
-    <relation seriesid="03ace03c-9510-11d7-8878-ca4ddf1759a6"/>
-    <rights type="GNU FDL" license.version="1.1" holder="Robin Ericsson"/>
-  </resource>
-</omf>
